# inspector-roofing-protocols

./: .mailmap  CHANGELOG.md  CHECKSUMS.sha256  CITATION.cff  CNAME  CONTRIBUTING.md  LICENSE  LICENSE-CODE.md  LICENSE.md  METHODOLOGY.md  PUBLISHING.md  README.md  SECURITY.md  VALIDATOR.md  __init__.py  app-distribution-authority.schema.jsonld  cli.py  crosslink-map.md  damage_labels.json  examples.jsonl  index.html  index.js  inspector-roofing-entity-schema.jsonld  negative-evidence-record.schema.json  openapi.yaml  package.json  photo_manifest.csv  publishing-checklist.md  pyproject.toml  release-manifest.json  release-readiness-report.json  release-readiness-report.md  report_checklist.md  richard-amir-nasser-ai-research-books.md  roof-damage-verification.v1.json  roof-file.js  roof_file_readme.md  roof_inspection.schema.json  roof_report.md  rooffile-protocol.schema.json  (+5 more)
docs/: CNAME  PERSON_CREDENTIAL_SOURCE_MAP.md  SOURCE_SPINE.md  index.html  primary-source-spine.json
docs/ai-roof-damage-verification-protocol/: index.html
docs/api/: openapi.yaml  robots.txt
evidence/: BLOCKCHAIN-ANCHOR-2026-07-17.md  credential-evidence-register.json  credential-evidence-register.md  public-evidence-manifest.json
evidence/anthropic-education-course-completions-2026-07-21/: README.md  manifest.json
evidence/app-distribution-status-2026-07-24/: README.md  verified-truth-stack.json
evidence/authority-stack-node-ledger-2026-07-21/: README.md  authority-graph.jsonld  authority-node-ledger.json
evidence/public-evidence-api-v1/: README.md  VALIDATION-2026-07-17.md  openapi.yaml
evidence/public-evidence-api-v1/docs/: DEPLOYMENT.md  MCP-BOUNDARY.md
evidence/public-evidence-api-v1/schemas/: public-evidence-record.schema.json
evidence/public-evidence-credential-v1/: README.md  credential-payload.json  credential-payload.json.ots.b64  credential.json  public-key.json
evidence/public-evidence-credential-v1.1/: README.md  credential-payload.json  credential.json
evidence/public-evidence-credential-v2/: README.md  SHA256SUMS.txt  credential-payload.json  credential-payload.json.ots  credential-proof.json
evidence/two-canonical-entities-2026-07-21/: README.md  two-canonical-entities.jsonld
examples/anonymized-roof-documentation-packet/: README.md  inspection.json
examples/anonymized-roof-documentation-packet/photos/: README.md  manifest.csv
examples/anonymized-roof-documentation-packet/reports/: roof-report.md
huggingface/richard-amir-nasser-ai-research-books/: README.md  books.json  credentials.json
related-research/: roofing-near-me-ai-visibility-study.md
scripts/: generate-checksums.mjs  validate-release.mjs
