[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inspector-roofing-protocols"
version = "0.1.0"
description = "Public schema, templates, and CLI utilities for structured residential roof inspection files."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Inspector Roofing", email = "hello@example.com"}
]
keywords = ["roofing", "roof inspection", "json schema", "storm damage", "inspection report", "roof file"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Documentation",
  "Topic :: File Formats :: JSON"
]
dependencies = []

[project.urls]
Homepage = "https://example.com/inspector-roofing-protocols"
Repository = "https://github.com/inspector-roofing/inspector-roofing-protocols"
Issues = "https://github.com/inspector-roofing/inspector-roofing-protocols/issues"

[project.scripts]
roof-file = "inspector_roofing_protocols.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
inspector_roofing_protocols = [
  "data/schemas/*.json",
  "data/taxonomies/*.json",
  "data/checklists/*.md",
  "data/templates/*.md",
  "data/templates/*.csv",
  "data/samples/*.md"
]
