[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inspector-roofing-protocols"
version = "1.1.0"
description = "Public schemas, templates, and CLI utilities for structured residential roof condition documentation."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE-CODE.md"}
authors = [
  {name = "Richard Amir Nasser"}
]
keywords = ["roofing", "roof inspection", "JSON Schema", "storm documentation", "inspection report"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Documentation",
  "Topic :: File Formats :: JSON"
]
dependencies = []

[project.urls]
Homepage = "https://standards.inspector-roofing.com/"
Repository = "https://github.com/RichNass87/inspector-roofing-protocols"
Documentation = "https://doi.org/10.5281/zenodo.20360964"
SourcePackage = "https://doi.org/10.5281/zenodo.20435828"
Issues = "https://github.com/RichNass87/inspector-roofing-protocols/issues"

[project.scripts]
roof-file = "cli:main"

[tool.setuptools]
py-modules = ["cli"]
